# internal/delivery/http/routes/routes.go
@@ -3,21 +3,17 @@ package routes
 import (
 	"github.com/gofiber/fiber/v2"
 	"github.com/gofiber/swagger"
-	"github.com/theborzet/time-tracker/internal/delivery/http/handler"
+	"github.com/theborzet/jwt_token/internal/delivery/http/v1/handler"
 )
 
 func RegistrationRoutes(app *fiber.App, h *handler.ApiHandler) {
-	userRoutes := app.Group("/user")
-	taskRoutes := app.Group("/task")
+	api := app.Group("/api")
+	v1 := api.Group("/v1")
+	authRoutes := v1.Group("/auth")
+	tokenRoutes := authRoutes.Group("/token")
 
-	userRoutes.Get("/tasks", h.GetUserTasks)
-	userRoutes.Get("/", h.GetUsers)
-	userRoutes.Post("/create", h.CreateUser)
-	userRoutes.Put("/update", h.UpdateUser)
-	userRoutes.Delete("/:id", h.DeleteUser)
-
-	taskRoutes.Post("/start", h.StartTask)
-	taskRoutes.Post("/end", h.EndTask)
+	tokenRoutes.Post("/{userID}")
+	tokenRoutes.Post("/refresh/{userID}")
 
 	//Including swagger
 	app.Get("/swagger/*", swagger.New(swagger.Config{
